--- a/panel.ui
+++ b/panel.ui
@@ -76,7 +76,7 @@
      <item>
       <widget class="QStackedWidget" name="stackedWidget">
        <property name="currentIndex">
-        <number>1</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="page">
         <layout class="QVBoxLayout" name="_layoutPage1">
@@ -111,8 +111,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>641</width>
-              <height>437</height>
+              <width>100</width>
+              <height>30</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="scrollManagerElements">
@@ -236,16 +236,8 @@
           <number>18</number>
          </property>
          <item>
-          <widget class="QWidget" name="wPage2" native="true">
-           <layout class="QGridLayout" name="gridLayout_4">
-            <item row="0" column="0">
-             <widget class="QToolButton" name="toolButton">
-              <property name="text">
-               <string>...</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
+          <widget class="QWidget" name="gridProfilWidget" native="true">
+           <layout class="QGridLayout" name="gridProfil"/>
           </widget>
          </item>
         </layout>
